Fixed FB like layout problem

--- a/css/books.css
+++ b/css/books.css
@@ -67,7 +67,7 @@ hr {
 }
 
 .search {
-    width: 950px;
+    width: 990px;
     margin: 1.5em auto;
     margin-bottom: 0px;
 }
@@ -79,6 +79,7 @@ hr {
 .logo_img {
     float: left;
 }
+
 
 .logo_txt {
     float: left;
@@ -117,8 +118,9 @@ hr {
     margin-bottom: 0.8em;
 }
 
+
 .container {
-    width: 950px;
+    width: 990px;
     margin: 0 auto;
     margin-top: 1.0em;
 }
@@ -132,12 +134,12 @@ hr {
 
 .left_panel, #home {
     float: left;
-    width: 150px;
+    width: 190px;
     margin-left: 20px;
 }
 
 #fb_like_btn {
-    margin-left: -60px;
+    margin-left: -20px;
     margin-top: 50px;
     border: none;
     overflow: hidden;
@@ -166,7 +168,6 @@ hr {
 p + p {
     margin-top: -1.5em;
 }
-
 
 /******** list **********/
 .center_list {
@@ -244,7 +245,7 @@ hr.split {
 }
 
 .pagination {
-    width: 950px;
+    width: 990px;
     margin: 0 auto;
     text-align: center;
     float: left;
